# jepa-causal

./: README.md  environment.yml  requirements.txt
app/: app.py  pyproject.toml
app/pipeline/: orchestrator.py
src/data/: loaders.py
src/models/: encoder.py
visualization/: package-lock.json  package.json
visualization/src/: App.css  App.tsx  Visualizer.tsx  index.css
